<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vani.ddsconverter.withoutDDS">

    <EditText
        android:id="@+id/editTextWithoutDDS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cal_withoutDDS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="57dp"
        android:onClick="CalculateJustPrice"
        android:text="@string/calculate_button2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Price_text"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="171dp" />

    <TextView
        android:id="@+id/resOnlyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_OnlyPrice_Tv"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/details_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="332dp" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:onClick="HomePage"
        android:text="@string/back_Home"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
